--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-*.*
+# Just gonna ignore all files by default (whitelist)
+*
+
+# Keep currently required filenames and types
 !*.sh
 !FirstBiblio.bib
 !FirstExample.tex
@@ -7,4 +10,6 @@
 !*.fasta
 !*.md
 !180*.csv
+
+# No sandbox please
 sandbox/
