--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
 # Just gonna ignore all files by default (whitelist method)
 *.*
 
-# Keep currently required filenames and types
+# Allow code, data and .sh scripts
 !*.sh
-!*/results/.gitkeep
-!*/code/
-!*/code/*
-!*/data/
-!*/data/*
+!*/code/**
+!*/data/**
 
-# No sandbox please and no results except gitkeep
-*/sandbox/*
+# Allow results folder but ignore the contents except .gitkeep
+!*/results/
 */results/*
+!*/results/.gitkeep
+
+# Ignore sandbox and other temp files
+*/sandbox/*
 .DS_Store
-*/__pycache__
+*/__pycache__/
 */.RData
 */.Rhistory
