--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Just gonna ignore all files by default (whitelist method)
-*.*
-
 # Allow code, data and .sh scripts
 !*.sh
 !*/code/**
@@ -16,5 +13,8 @@
 */sandbox/*
 .DS_Store
 */__pycache__/
-*/.RData
-*/.Rhistory
+.RData
+.Rhistory
+*.tmp
+*~
+*.yaml
