added few files in week4, added DataWrang in week3, and changed .gitignore for myenv

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,16 @@
 
 # Ignore sandbox and other temp files
 */sandbox/*
+*/sandbox/
 .DS_Store
 */__pycache__/
 .RData
+*/.RData
+*/.Rhistory
 .Rhistory
 *.tmp
 *~
 *.yaml
+myenv/*
+.
+..
